[gd_scene load_steps=18 format=3 uid="uid://beda80kl3xx5i"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5stvq"]
[ext_resource type="Texture2D" uid="uid://c3ru1p0pkvs54" path="res://assets/Enemies/slime_blue.png" id="2_u1tmg"]
[ext_resource type="Texture2D" uid="uid://hx48ovhmckta" path="res://assets/FX/cannon_fire_smoke.png" id="3_jc5uq"]
[ext_resource type="AudioStream" uid="uid://uxwu4a0l0ojo" path="res://sounds/drop_001.ogg" id="4_yv66u"]
[ext_resource type="AudioStream" uid="uid://c15blhdq8fe6i" path="res://sounds/error_006.ogg" id="5_8j80o"]
[ext_resource type="AudioStream" uid="uid://do231dqeua66p" path="res://sounds/error_008.ogg" id="6_ub7c6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me3jy"]
size = Vector2(16, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohkde"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22sv1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3ddq"]
size = Vector2(20, 2)

[sub_resource type="Animation" id="Animation_17cry"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CannonFireSmoke_Left:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CannonFireSmoke_Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Left:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Right:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CannonFireSmoke_Right:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CannonFireSmoke_Right:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CannonFireSmoke_Left:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CannonFireSmoke_Right:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Left:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Right:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nsyos"]
resource_name = "Splt"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CannonFireSmoke_Left:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CannonFireSmoke_Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-16, 0), Vector2(-26, 0), Vector2(-36, 0), Vector2(-46, 0), Vector2(-56, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Left:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-16, 0), Vector2(-26, 0), Vector2(-36, 0), Vector2(-46, 0), Vector2(-56, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Right:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 0), Vector2(26, 0), Vector2(36, 0), Vector2(46, 0), Vector2(56, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CannonFireSmoke_Right:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CannonFireSmoke_Right:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 0), Vector2(26, 0), Vector2(36, 0), Vector2(46, 0), Vector2(56, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CannonFireSmoke_Left:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CannonFireSmoke_Right:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Left:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Area2D_PlayerWind/CollisionShape2D_Right:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pbuhy"]
resource_name = "Walk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aiqt5"]
_data = {
"RESET": SubResource("Animation_17cry"),
"Stomp": SubResource("Animation_nsyos"),
"Walk": SubResource("Animation_pbuhy")
}

[sub_resource type="Animation" id="Animation_ns5j4"]
resource_name = "Dead"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 6, 8, 0]
}

[sub_resource type="Animation" id="Animation_12xev"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6807x"]
_data = {
"Dead": SubResource("Animation_ns5j4"),
"RESET": SubResource("Animation_12xev")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -8)
script = ExtResource("1_5stvq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_u1tmg")
flip_h = true
hframes = 5
vframes = 2
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_me3jy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 3)
zoom = Vector2(5, 5)
limit_left = -144
limit_top = -352
limit_right = 480
limit_bottom = 272
editor_draw_limits = true

[node name="CannonFireSmoke_Left" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
texture = ExtResource("3_jc5uq")
hframes = 5

[node name="CannonFireSmoke_Right" type="Sprite2D" parent="."]
position = Vector2(16, 0)
rotation = -3.14159
texture = ExtResource("3_jc5uq")
hframes = 5

[node name="Area2D_PlayerWind" type="Area2D" parent="."]

[node name="CollisionShape2D_Left" type="CollisionShape2D" parent="Area2D_PlayerWind"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_ohkde")

[node name="CollisionShape2D_Right" type="CollisionShape2D" parent="Area2D_PlayerWind"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_22sv1")

[node name="CollisionShape2D_Stomp" type="CollisionShape2D" parent="Area2D_PlayerWind"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_r3ddq")

[node name="Walk_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aiqt5")
}

[node name="Stomp_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aiqt5")
}
speed_scale = 2.0

[node name="Dead_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6807x")
}

[node name="jump_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yv66u")
volume_db = 10.0

[node name="dead_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8j80o")

[node name="stomp_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ub7c6")
volume_db = -10.0

[connection signal="body_entered" from="Area2D_PlayerWind" to="." method="_on_area_2d_player_wind_body_entered"]
[connection signal="animation_finished" from="Dead_AnimationPlayer" to="." method="_on_dead_animation_player_animation_finished"]
